Version 1.1 alpha (2016-2-8):
* Added
  - CCSD gradients
  - DMRG-NEVPT2 interface
  - DFT gradients
  - TDDFT and TDDFT gradients
  - DFT NMR
  - COSMO interface
  - QM/MM interface
  - Pipek-Mezey localization
  - DF-CASSCF
  - State-specific CASSCF for excited states
  - Stream operations: apply, run, set
  - General basis value evaluator
  - DMRG (Block) examples


Version 1.0 (2015-10-8):
* 1.0 Release

Version 1.0 rc (2015-9-7):
* Add examples
* Add documents
* Optimize CCSD lambda solver and CCSD density matrix
* Optimize Boys localization.
* Tune CASSCF solver parameters
* Bug fixing for mcscf, localizer, nevpt2 and dft modules

Version 1.0 beta (2015-8-2):
* FCI spin eigen function
* Add state-average CASSCF
* CCSD lambda equation and density matrix

Version 1.0 alpha 2 (2015-7-3):
* Optimize HF J K contraction
* MP2 2 particle density matrix
* Default population analysis with meta-Lowdin orthogonalized AO
* Update FCI to handle more than 23 orbitals
* Multiple roots for FCI solver
* Optimize MCSCF convergence
* FCI/MCSCF wave function symmetry
* Z-matrix input
* Add chkfile_util script to analyze calculation on the fly
* CI determinants overlap
* Fix DIIS bug

Version 1.0-alpha (2015-4-7):
* D{\infty}h and C{\infty}v
* Fix bug in DFT screening functions

Version 0.11 (2015-3-6):
* Remove redundant module fci.direct_ms0
* Update the point group symmetry detect function
* Optimized DFT grids
* NEVPT2 (By S. Guo)
* X2C-1e HF
* Boys localization (By S. Wouters)
* Edmiston-Ruedenberg localization (By S. Wouters)
* Density fitting CASSCF

Version 0.10 (2015-2-4):
* Refactoring:
  - Expose class member functions to module level
  - Rename member function of class Mole,
    xxx_of_atm -> atom_xxx, xxx_of_bas -> bas_xxx
  - Rename scf.hf.scf_cycle to scf.hf.kernel
  - Rename conv_threshold to conv_tol
  - Rename hf.calc_tot_elec_energy to hf.energy_tot
  - Rename hf.set_mo_occ to hf.get_occ
  - unify variable names, mo -> mo_coeff, log -> verbose