@@ -15,6 +15,11 @@ from pyscf.dft import uks_symm
 from pyscf.dft import gen_grid as grid
 from pyscf.dft import radi
 from pyscf.df import density_fit
+from pyscf.dft.gen_grid import sg1_prune, nwchem_prune, treutler_prune, \
+        stratmann, original_becke
+from pyscf.dft.radi import BRAGG_RADII, COVALENT_RADII, \
+        delley, mura_knowles, gauss_chebyshev, treutler, treutler_ahlrichs, \
+        treutler_atomic_radii_adjust, becke_atomic_radii_adjust
 
 
 def RKS(mol, *args):
