@@ -25,8 +25,8 @@ class KnowValues(unittest.TestCase):
         grid.prune = None
         grid.radi_method = radi.gauss_chebyshev
         grid.becke_scheme = gen_grid.original_becke
-        grid.atomic_radii = radi.becke_atomic_radii_adjust(h2o, \
-                numpy.round(radi.BRAGG_RADII, 2))
+        grid.radii_adjust = radi.becke_atomic_radii_adjust
+        grid.atomic_radii = radi.BRAGG_RADII
         grid.atom_grid = {"H": (10, 50), "O": (10, 50),}
         coord, weight = grid.setup_grids()
         self.assertAlmostEqual(numpy.linalg.norm(coord), 185.91245945279027, 9)
@@ -39,8 +39,8 @@ class KnowValues(unittest.TestCase):
     def test_radi(self):
         grid = gen_grid.Grids(h2o)
         grid.prune = None
-        grid.atomic_radii = radi.becke_atomic_radii_adjust(h2o, \
-                numpy.round(radi.COVALENT_RADII, 2))
+        grid.radii_adjust = radi.becke_atomic_radii_adjust
+        grid.atomic_radii = radi.COVALENT_RADII
         grid.radi_method = radi.mura_knowles
         grid.atom_grid = {"H": (10, 50), "O": (10, 50),}
         coord, weight = grid.setup_grids()
@@ -60,8 +60,8 @@ class KnowValues(unittest.TestCase):
 
         grid.prune = gen_grid.nwchem_prune
         coord, weight = grid.setup_grids()
-        self.assertAlmostEqual(numpy.linalg.norm(coord), 151.01253616288849, 9)
-        self.assertAlmostEqual(numpy.linalg.norm(weight), 586.59843503169827, 9)
+        self.assertAlmostEqual(numpy.linalg.norm(coord), 166.41909217472616, 9)
+        self.assertAlmostEqual(numpy.linalg.norm(weight), 707.32093809462719, 9)
 
 
 if __name__ == "__main__":
