@@ -34,12 +34,12 @@ class KnowValues(unittest.TestCase):
 
     def test_lyp(self):
         e,v,f = dft.libxc.eval_xc(',LYP', rho, deriv=2)[:3]
-        self.assertAlmostEqual(finger(e), -0.36064427429079671, 3)
-        self.assertAlmostEqual(finger(v[0]), -0.75835482781412178, 3)
-        self.assertAlmostEqual(finger(v[1]), -201.87936893573291, 3)
-        self.assertAlmostEqual(finger(f[0]), 41297.120111016673, 1)
-        self.assertAlmostEqual(finger(f[1]), -962737.70242896723, 2)
-        self.assertAlmostEqual(finger(f[2]), -3.3540180961110231, 9)
+        self.assertAlmostEqual(finger(e), -0.17323104957458663, 3)
+        self.assertAlmostEqual(finger(v[0]), 0.35833073697102674, 3)
+        self.assertAlmostEqual(finger(v[1]), 139.38989136986777, 3)
+        self.assertAlmostEqual(finger(f[0]), 1130279.4081989136, 1)
+        self.assertAlmostEqual(finger(f[1]), -2257802.6403745515, 2)
+        self.assertAlmostEqual(finger(f[2]), 0, 3)
 
 if __name__ == "__main__":
     print("Test libxc")
