@@ -24,13 +24,13 @@ nao = mol.nao_nr()
 class KnowValues(unittest.TestCase):
     def test_make_mask(self):
         non0 = dft.numint.make_mask(mol, mf.grids.coords)
-        self.assertEqual(non0.sum(), 93442)
+        self.assertEqual(non0.sum(), 85503)
         self.assertAlmostEqual(numpy.dot(non0.ravel(),
                                          numpy.cos(numpy.arange(non0.size))),
-                               -7.719100771397839, 9)
+                               -57.669325753467128, 9)
         self.assertAlmostEqual(numpy.dot(numpy.cos(non0).ravel(),
                                          numpy.cos(numpy.arange(non0.size))),
-                               4.7271626964386755, 9)
+                               26.47061369162784, 9)
 
     def test_dot_ao_dm(self):
         non0tab = dft.numint.make_mask(mol, mf.grids.coords)
